src/components/scss/main.scss
$Mercury-primary: #419EBB;
$Venus-primary: #EDA249;
$Earth-primary: #6D2ED5;
$Mars-primary: #D14C32;
$Jupiter-primary: #D83A34;
$Saturn-primary: #CD5120;
$Uranus-primary: #1EC1A2;
$Neptune-primary: #2D68F0;

// .main--container > * {
//   margin: 1rem;
// }
.main{
  color:white;
  // border: 5px solid goldenrod;
  margin: 0 5% 0 5%;
}
#main--container{
  margin: 1rem;
  // border: 3px solid blueviolet;
  display:grid;
  grid-template-columns: 1fr 350px;
  #img--container{
    margin: 1rem;
    // border: 3px solid green;
  }
  #main--desc{
    margin: 1rem;
    // border: 3px solid brown;
    #name--container{
      display: flex;
      flex-direction: column;
      gap: 1.8rem;
      h1{
        font-size:40px;
        font-family: "Antonio";
      }
      #first-p{
        border: 3px solid green;
        min-height: 170px;
      }
      p{
        font-family: 'League Spartan', sans-serif;
        font-size: 14px;
        opacity: .85;
        line-height: 1.4rem;
        #wiki-link {
          color:white;
        }
        
      }
    }
    #tabs{
      display:flex;
      flex-direction: column;
      gap: 10px;
      font-family: 'League Spartan', sans-serif;
      color: white;
      .tab{
        cursor: pointer;
        padding-left: 15px;
        font-size: 12px;
        display: flex;
        align-items: center;
        min-height: 50px;
        gap:15px;
        
      }
    }
  }
}
.tab{
  border: 1px solid #D8D8D8;
  
}
.lower-opacity{
  opacity: .65;
}
.main .active{
  border-color: transparent;
}
#Mercury{
  .active{
    background-color: $Mercury-primary;
  }
}
#Venus{
  .active{
    background-color: $Venus-primary;
  }
}
#Earth{
  .active{
    background-color: $Earth-primary;
  }
}
#Mars{
  .active{
    background-color: $Mars-primary;
  }
}
#Jupiter{
  .active{
    background-color: $Jupiter-primary;
  }
}
#Saturn{
  .active{
    background-color: $Saturn-primary;
  }
}
#Uranus{
  .active{
    background-color: $Uranus-primary;
  }
}
#Neptune{
  .active{
    background-color: $Neptune-primary;
  }
}
/*
.main{
  #tabs{
    h3:hover{
      border-bottom-color: blue;
    }
  }
}
.main{
    color:white;
    #tabs {
      
      font-family: 'League Spartan', sans-serif;
      color: #979797;
      h3:hover{
        color:white;
        // border-bottom-color: orange;
      }
    }
    #img--container{
      // border: blue 3px solid;
      display:flex;
      justify-content: center;
      align-items: center;
      height:290px;

    }
    .main--desc{
      
      h1{
        font-size:40px;
        font-family: "Antonio";
      }
      p{
        font-family: 'League Spartan', sans-serif;
        font-size: 11px;
      }
    }
  }

  @media(max-width:450px){
    #main-img{
      position: relative;
    }
    #secondary-img{
      position: absolute;
      top: 310px;
      width:100px;
      height: auto;
    }
    .main{
      border-top: 1px solid #979797;
      padding-top: 5px;
      display:flex;
      flex-direction: column;
     img{
      // border: 1px solid red;
      
      align-self: center;
     }
     .main--desc{
      display:flex;
      flex-direction: column;
      align-items: center;
      padding:20px 10px;
      gap:10px;
      max-width: 290px;
      align-self: center;
      p{
        text-align: center;
        line-height: 1rem;
        a {
          color:#979797;
        }
      }
     }
      #tabs{
        letter-spacing: 1px;
        font-size: 9px;
        padding: 1rem;
        border-bottom:1px solid #979797;
        display:flex;
        justify-content: space-evenly;
        align-items: center;
        position: relative;
        height: 50px;
        h3{
         z-index: 0;
          padding-bottom: 20px;
          top:10px;
          border-bottom: 2px solid transparent;
          position:relative;
        }
        h3:hover{
          // border-bottom-color: $Mars-primary;
        }
      }
    }
    #Mercury {
      #tabs{
        .tab:hover{
          border-bottom-color: $Mercury-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Mercury-primary;
        }
      }
      #main-img{
        width:111px;
        height:111px;
      }
    }
    #Venus{
      #tabs{
        .tab:hover{
          border-bottom-color: $Venus-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Venus-primary;
        }
      }
      
      #main-img{
        width:154px;
        height:154px;
      }
    }
    #Earth{
      #tabs{
        .tab:hover{
          border-bottom-color: $Earth-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Earth-primary;
        }
      }
      #main-img{
        width:173px;
        
      }
    }
    #Mars{
      #tabs{
        .tab:hover{
          border-bottom-color: $Mars-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Mars-primary;
        }
      }
      #main-img{
        width: 129px;
      }
    }
    #Jupiter{
      #tabs{
        .tab:hover{
          border-bottom-color: $Jupiter-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Jupiter-primary;
        }
      }
      #main-img{
        width:224px;
      }
      
        h3:hover{
          border-bottom-color: $Jupiter-primary;

        }
      
    }
    #Saturn{
      #tabs{
        .tab:hover{
          border-bottom-color: $Saturn-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Saturn-primary;
        }
      }
      #main-img{
        width:256px;
      }
    }
    #Uranus{
      #tabs{
        .tab:hover{
          border-bottom-color: $Uranus-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Uranus-primary;
        }
      }
      #main-img{
        width: 176px;
      }
    }
    #Neptune{
      #tabs{
        .tab:hover{
          border-bottom-color: $Neptune-primary;
        }
        .active{
          color:white;
          border-bottom-color: $Neptune-primary;
        }
      }
      #main-img{
        width: 173px;
      }
      #tab:hover{
        border-bottom-color: $Neptune-primary;
      }
    }
  }

*/

